force-app/main/default/objects/Donor_Report__c/Donor_Report__c.object-meta.xml
<CustomObject>
    <label>Donor Report</label>
    <nameField>
        <label>Donor Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donor Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>