force-app/main/default/objects/Donor_Report__c/fields/Donor_Category__c.field-meta.xml
<CustomField>
    <fullName>Donor_Category__c</fullName>
    <label>Donor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time Donor</fullName>
            </value>
            <value>
                <fullName>Recurring Donor</fullName>
            </value>
            <value>
                <fullName>Major Donor</fullName>
            </value>
            <value>
                <fullName>First-time Donor</fullName>
            </value>
            <value>
                <fullName>Returning Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>